--- a/index.html
+++ b/index.html
@@ -97,7 +97,134 @@
       </div>
     </main>
     <!--main end-->
-    
+
+    <!--about start-->
+    <about class="about">
+      <div class="about_left_img">
+        <img src="./images/download.jpg" alt="">
+      </div>
+      <div class="about_right">
+        <h1>About Us</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatum a nobis atque alias quos esse nisi similique officiis impedit. Beatae, ullam iste aperiam vel consequatur architecto voluptatum esse Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, rem? Impedit molestiae illo, officia tenetur exercitationem inventore voluptas, quae aspernatur consequatur quis ullam. Necessitatibus labore saepe voluptatum possimus non exercitationem quia sint omnis libero voluptas, consectetur maxime. Quo quibusdam nobis numquam cum fugit ratione ab, possimus, maiores nesciunt est sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae obcaecati debitis, nesciunt voluptas hic cumque ipsum sint veniam! Rerum, saepe.</p>
+      </div>
+    </about>
+    <!--about end-->
+
+    <!--service's start-->
+    <div class="service">
+      <h1>Service's</h1>
+      <div class="all_services">
+        <div class="one">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$2.99</div>
+        </div>
+        <div class="two"> 
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$5.99</div>
+        </div>
+        <div class="three"> 
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$9.99</div>
+        </div>
+        <div class="four">
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$19.99</div>
+        </div>
+        <div class="five">
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$29.99</div>
+        </div>
+        <div class="six">
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis esse nemo id, voluptates sequi, unde amet necessitatibus culpa iure molestias nulla saepe odio laudantium accusamus!</p>
+          <div class="price">$39.99</div>
+        </div>
+      </div>
+    </div>
+    <!--service's end-->
+
+    <!--Contact & Inquiry start-->
+<section id="form">
+  <div class="container">
+    <h3 class="form__title">
+      Contact & Inquiry
+    </h3>
+    <div class="form__wrapper">
+      <form name="contact" method="POST">
+        <div class="form__group">
+          <label for="firstName">First Name</label>
+          <input type="text" id="firstName" name="First Name" required>
+        </div>
+        <div class="form__group">
+          <label for="lastName">Last Name</label>
+          <input type="text" id="lastName" name="Last Name" required>
+        </div>
+        <div class="form__group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="Email" required>
+        </div>
+        <div class="form__group">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="Subject" required>
+        </div>
+        <div class="form__group form__group__full">
+          <label for="message">Message</label>
+          <textarea name="Message" id="message" cols="30" rows="6" required></textarea>
+        </div>
+        <button type="submit" class="btn primary-btn">Send</button>
+      </form>
+    </div>
+  </div>
+</section>
+<!--Contact & Inquiry end-->
+
+<!--Footer start-->
+<section class="footer_info">
+  <div class="footer_wrappar">
+      <div class="footer_text">
+          <div class="footer_logo">
+              <h3>Logo, website Name</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, voluptatum. Debitis nostrum temporibus perferendis nisi.</p>
+          </div>
+          <div class="footer_links">
+              <h3>Links</h3>
+              <ul>
+                <li><a  href="Index.html">Home</a></li>
+                <li><a  href="about.html">About</a></li>
+                <li><a  href="Project.html">Project</a></li>
+                <li><a  href="Images.html" >Images</a></li>
+                <li><a  href="Contact.html">Contact</a></li>
+              </ul>
+          </div>
+          <div class="footer_support">
+              <h3>Support</h3>
+              <ul>
+                  <li><a href="Contact.html">Contact</a></li>
+                  <li><a href="#">Support Center</a></li>
+                  <li><a href="#">Feedback</a></li>
+              </ul>
+          </div>
+          <div class="footer_contact">
+              <h3>Contact</h3>
+              <p>+880123</p>
+              <p>projectnotsouseless@gamil.com</p>
+              <p>
+                  GEC Circle,
+                  chittagoang,
+                  <br>
+                  Bangladesh
+              </p>
+          </div>
+      </div>
+  </div>
+</section>
+<div class="copyright">
+  <div class="copyright_info">
+      <p>
+          © copyright 2022, Project not so useless | All rights reserved
+      </p>
+  </div>
+</div>
+<!--Footer end-->
     <!-- aos script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- custom script -->
